get all plants from database ready
