# src/main/resources/openapi-group-14.yaml
@@ -25,7 +25,7 @@ components:
           example: "John.Doe@gmail.com"
         birthDay:
           type: string
-          example: "2000-01-01"
+          example: "01-01-2000"
         address:
           type: string
           example: "The Moon"
@@ -62,7 +62,7 @@ components:
           example: 1
         date:
           type: "string"
-          example: "2000-01-01"
+          example: "01-01-2000"
         amount:
           type: "integer"
           example: 10
@@ -91,33 +91,59 @@ paths:
                 type: string
   /register:
     post:
-      summary: Register a new user
+      summary: Build a building
       operationId: createUser
       requestBody:
         required: true
         content:
           text/plain:
             schema:
-              type: object
               items:
                 $ref: "#/components/schemas/User"
       responses:
-        200:
+        '200':
           description: Ok
+        '401':
+          description: Absent or mallformed authentication
+        '500':
+          description: Internal Server Error
 
-  /getProducts:
+
+  /getPlants:
     get:
-      summary: Get all products
-      operationId: getAllProducts
+      summary: Get all plants
+      operationId: getPlants
       responses:
         '200':
           description: OK
           content:
             text/plain:
               schema:
-                type: object
+                type: array
                 items:
                   $ref: '#/components/schemas/Product'
+        '401':
+          description: Absent or mallformed authentication
+        '500':
+          description: Internal Server Error
+
+  /getSeeds:
+    get:
+      summary: Get all Seeds
+      operationId: getSeeds
+      responses:
+        '200':
+          description: OK
+          content:
+            text/plain:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Product'
+        '401':
+          description: Absent or mallformed authentication
+        '500':
+          description: Internal Server Error
 
   /addProduct:
     post:
